bug fixes, improvments

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
             <div class="catalog__products">
                <div class="catalog__items-inner">
 
-                  <a class="catalog__item card-item" href="#">
+                  <a class="catalog__item card-item" href="./card-product.html">
                      <div class="card-item__box">
                         <div class="card-item__elipse"></div>
                         <p class="card-item__name">Джон Уик</p>
@@ -133,7 +133,7 @@
                      </div>
                   </a>
 
-                  <a class="catalog__item card-item" href="#">
+                  <a class="catalog__item card-item" href="./card-product.html">
                      <div class="card-item__box">
                         <div class="card-item__elipse"></div>
                         <p class="card-item__name">Какаши</p>
@@ -144,7 +144,7 @@
                      </div>
                   </a>
 
-                  <a class="catalog__item card-item" href="#">
+                  <a class="catalog__item card-item" href="./card-product.html">
                      <div class="card-item__box">
                         <div class="card-item__elipse"></div>
                         <p class="card-item__name">снегобой</p>
@@ -155,7 +155,7 @@
                      </div>
                   </a>
 
-                  <a class="catalog__item card-item " href="#">
+                  <a class="catalog__item card-item " href="./card-product.html">
                      <div class="card-item__box">
                         <div class="card-item__elipse"></div>
                         <p class="card-item__name">в-баксы</p>
@@ -166,7 +166,7 @@
                      </div>
                   </a>
 
-                  <a class="catalog__item card-item " href="#">
+                  <a class="catalog__item card-item " href="./card-product.html">
                      <div class="card-item__box">
                         <div class="card-item__elipse"></div>
                         <p class="card-item__name">в-баксы</p>
@@ -177,7 +177,7 @@
                      </div>
                   </a>
 
-                  <a class="catalog__item card-item" href="#">
+                  <a class="catalog__item card-item" href="./card-product.html">
                      <div class="card-item__box">
                         <div class="card-item__elipse"></div>
                         <p class="card-item__name">Джон Уик</p>
@@ -188,7 +188,7 @@
                      </div>
                   </a>
 
-                  <a class="catalog__item card-item" href="#">
+                  <a class="catalog__item card-item" href="./card-product.html">
                      <div class="card-item__box">
                         <div class="card-item__elipse"></div>
                         <p class="card-item__name">Какаши</p>
@@ -199,7 +199,7 @@
                      </div>
                   </a>
 
-                  <a class="catalog__item card-item" href="#">
+                  <a class="catalog__item card-item" href="./card-product.html">
                      <div class="card-item__box">
                         <div class="card-item__elipse"></div>
                         <p class="card-item__name">снегобой</p>
@@ -210,7 +210,7 @@
                      </div>
                   </a>
 
-                  <a class="catalog__item card-item" href="#">
+                  <a class="catalog__item card-item" href="./card-product.html">
                      <div class="card-item__box">
                         <div class="card-item__elipse"></div>
                         <p class="card-item__name">в-баксы</p>
@@ -221,7 +221,7 @@
                      </div>
                   </a>
 
-                  <a class="catalog__item card-item " href="#">
+                  <a class="catalog__item card-item " href="./card-product.html">
                      <div class="card-item__box">
                         <div class="card-item__elipse"></div>
                         <p class="card-item__name">в-баксы</p>
@@ -246,7 +246,7 @@
                <div class="swiper-wrapper popular-offers__wrapper">
                   <!-- Slides -->
                   <div class="popular-offers__slide swiper-slide ">
-                     <a class="popular-offers__item card-item" href="#">
+                     <a class="popular-offers__item card-item" href="./card-product.html">
                         <div class="card-item__box">
                            <div class="card-item__elipse"></div>
                            <p class="card-item__name">Джон Уик</p>
@@ -259,7 +259,7 @@
                   </div>
 
                   <div class="popular-offers__slide swiper-slide ">
-                     <a class="popular-offers__item card-item" href="#">
+                     <a class="popular-offers__item card-item" href="./card-product.html">
                         <div class="card-item__box">
                            <div class="card-item__elipse"></div>
                            <p class="card-item__name">Какаши</p>
@@ -272,7 +272,7 @@
                   </div>
 
                   <div class="popular-offers__slide swiper-slide ">
-                     <a class="popular-offers__item card-item" href="#">
+                     <a class="popular-offers__item card-item" href="./card-product.html">
                         <div class="card-item__box">
                            <div class="card-item__elipse"></div>
                            <p class="card-item__name">снегобой</p>
@@ -285,7 +285,7 @@
                   </div>
 
                   <div class="popular-offers__slide swiper-slide ">
-                     <a class="popular-offers__item card-item" href="#">
+                     <a class="popular-offers__item card-item" href="./card-product.html">
                         <div class="card-item__box">
                            <div class="card-item__elipse"></div>
                            <p class="card-item__name">в-баксы</p>
@@ -298,7 +298,7 @@
                   </div>
 
                   <div class="popular-offers__slide swiper-slide ">
-                     <a class="popular-offers__item card-item" href="#">
+                     <a class="popular-offers__item card-item" href="./card-product.html">
                         <div class="card-item__box">
                            <div class="card-item__elipse"></div>
                            <p class="card-item__name">в-баксы</p>
@@ -311,7 +311,7 @@
                   </div>
 
                   <div class="popular-offers__slide swiper-slide ">
-                     <a class="popular-offers__item card-item" href="#">
+                     <a class="popular-offers__item card-item" href="./card-product.html">
                         <div class="card-item__box">
                            <div class="card-item__elipse"></div>
                            <p class="card-item__name">Джон Уик</p>
@@ -324,7 +324,7 @@
                   </div>
 
                   <div class="popular-offers__slide swiper-slide ">
-                     <a class="popular-offers__item card-item" href="#">
+                     <a class="popular-offers__item card-item" href="./card-product.html">
                         <div class="card-item__box">
                            <div class="card-item__elipse"></div>
                            <p class="card-item__name">Какаши</p>
@@ -337,7 +337,7 @@
                   </div>
 
                   <div class="popular-offers__slide swiper-slide ">
-                     <a class="popular-offers__item card-item" href="#">
+                     <a class="popular-offers__item card-item" href="./card-product.html">
                         <div class="card-item__box">
                            <div class="card-item__elipse"></div>
                            <p class="card-item__name">снегобой</p>
@@ -350,7 +350,7 @@
                   </div>
 
                   <div class="popular-offers__slide swiper-slide ">
-                     <a class="popular-offers__item card-item" href="#">
+                     <a class="popular-offers__item card-item" href="./card-product.html">
                         <div class="card-item__box">
                            <div class="card-item__elipse"></div>
                            <p class="card-item__name">в-баксы</p>
@@ -363,7 +363,7 @@
                   </div>
 
                   <div class="popular-offers__slide swiper-slide ">
-                     <a class="popular-offers__item card-item" href="#">
+                     <a class="popular-offers__item card-item" href="./card-product.html">
                         <div class="card-item__box">
                            <div class="card-item__elipse"></div>
                            <p class="card-item__name">в-баксы</p>
