--- a/guarantees.html
+++ b/guarantees.html
@@ -85,7 +85,7 @@
                <div class="swiper-wrapper popular-offers__wrapper">
                   <!-- Slides -->
                   <div class="popular-offers__slide swiper-slide ">
-                     <a class="popular-offers__item card-item" href="#">
+                     <a class="popular-offers__item card-item" href="./card-product.html">
                         <div class="card-item__box">
                            <div class="card-item__elipse"></div>
                            <p class="card-item__name">Джон Уик</p>
@@ -98,7 +98,7 @@
                   </div>
 
                   <div class="popular-offers__slide swiper-slide ">
-                     <a class="popular-offers__item card-item" href="#">
+                     <a class="popular-offers__item card-item" href="./card-product.html">
                         <div class="card-item__box">
                            <div class="card-item__elipse"></div>
                            <p class="card-item__name">Какаши</p>
@@ -111,7 +111,7 @@
                   </div>
 
                   <div class="popular-offers__slide swiper-slide ">
-                     <a class="popular-offers__item card-item" href="#">
+                     <a class="popular-offers__item card-item" href="./card-product.html">
                         <div class="card-item__box">
                            <div class="card-item__elipse"></div>
                            <p class="card-item__name">снегобой</p>
@@ -124,7 +124,7 @@
                   </div>
 
                   <div class="popular-offers__slide swiper-slide ">
-                     <a class="popular-offers__item card-item" href="#">
+                     <a class="popular-offers__item card-item" href="./card-product.html">
                         <div class="card-item__box">
                            <div class="card-item__elipse"></div>
                            <p class="card-item__name">в-баксы</p>
@@ -137,7 +137,7 @@
                   </div>
 
                   <div class="popular-offers__slide swiper-slide ">
-                     <a class="popular-offers__item card-item" href="#">
+                     <a class="popular-offers__item card-item" href="./card-product.html">
                         <div class="card-item__box">
                            <div class="card-item__elipse"></div>
                            <p class="card-item__name">в-баксы</p>
@@ -150,7 +150,7 @@
                   </div>
 
                   <div class="popular-offers__slide swiper-slide ">
-                     <a class="popular-offers__item card-item" href="#">
+                     <a class="popular-offers__item card-item" href="./card-product.html">
                         <div class="card-item__box">
                            <div class="card-item__elipse"></div>
                            <p class="card-item__name">Джон Уик</p>
@@ -163,7 +163,7 @@
                   </div>
 
                   <div class="popular-offers__slide swiper-slide ">
-                     <a class="popular-offers__item card-item" href="#">
+                     <a class="popular-offers__item card-item" href="./card-product.html">
                         <div class="card-item__box">
                            <div class="card-item__elipse"></div>
                            <p class="card-item__name">Какаши</p>
@@ -176,7 +176,7 @@
                   </div>
 
                   <div class="popular-offers__slide swiper-slide ">
-                     <a class="popular-offers__item card-item" href="#">
+                     <a class="popular-offers__item card-item" href="./card-product.html">
                         <div class="card-item__box">
                            <div class="card-item__elipse"></div>
                            <p class="card-item__name">снегобой</p>
@@ -189,7 +189,7 @@
                   </div>
 
                   <div class="popular-offers__slide swiper-slide ">
-                     <a class="popular-offers__item card-item" href="#">
+                     <a class="popular-offers__item card-item" href="./card-product.html">
                         <div class="card-item__box">
                            <div class="card-item__elipse"></div>
                            <p class="card-item__name">в-баксы</p>
@@ -202,7 +202,7 @@
                   </div>
 
                   <div class="popular-offers__slide swiper-slide ">
-                     <a class="popular-offers__item card-item" href="#">
+                     <a class="popular-offers__item card-item" href="./card-product.html">
                         <div class="card-item__box">
                            <div class="card-item__elipse"></div>
                            <p class="card-item__name">в-баксы</p>
