--- a/index.html
+++ b/index.html
@@ -396,7 +396,7 @@
             преимуществ в игре. Пора включить эмоцию «Брейк-данс» и показать всё, на что ты способен!
          </p>
          <p class="description__text">
-            На все товары предоставляется <span>гарантия</span>. При покупке нет рисков – это обычное приобретение в
+            На все товары предоставляется <a href="./guarantees.html">гарантия</a>. При покупке нет рисков – это обычное приобретение в
             онлайн-магазине.
             Твои права, личные данные и деньги полностью защищены. Единственный минус покупок – это невозможность
             остановиться, ведь скинов много не бывает и всегда хочется получить ещё больше. Меняй внешний вид своих
