fixed-buttons(hover)

--- a/bill-payment-modal.html
+++ b/bill-payment-modal.html
@@ -21,7 +21,7 @@
 				<main class="modal__content" id="modal-1-content">
 					<form action="#" class="payment-form">
 
-						<div class="payment-form-step payment-form-prepare none">
+						<div class="payment-form-step payment-form-prepare ">
 							<div class="payment-form__container">
 								<h4 class="payment-form__title">Подготовка к оплате счета</h4>
 								<p class="payment-form__text">
@@ -76,7 +76,7 @@
 							</footer>
 						</div>
 
-						<div class="payment-form-step none">
+						<div class="payment-form-step ">
 							<div class="payment-form-cards">
 								<div class="payment-form__container">
 									<h4 class="payment-form__title">Выберите способ оплаты</h4>
