fixed_header-on-scroll

--- a/card-product.html
+++ b/card-product.html
@@ -8,6 +8,9 @@
 	<title>Fortnite.market</title>
 	<link rel="stylesheet" href="css/reset.css">
 	<link rel="stylesheet" href="css/global.css">
+	<link rel="stylesheet" href="css/header.css">
+	<link rel="stylesheet" href="css/header-media.css">
+
 	<link rel="stylesheet" href="css/card-product.css">
 	<link rel="stylesheet" href="css/card-product-media.css">
 </head>
@@ -27,7 +30,7 @@
 				</nav>
 			</div>
 		</section>
-		
+
 		<section class="card-product">
 			<div class="card-product__container container">
 				<div class="card-product__card card">
@@ -97,7 +100,6 @@
 			</div>
 		</section>
 	</main>
-
 	<!-- FOOTER -->
 
 	<!-- //FOOTER -->
