--- a/card-product.html
+++ b/card-product.html
@@ -16,7 +16,7 @@
 			<div class="header__row">
 				<div class="header__logo">
 					<a href="./index.html">
-						<img src="images/icons//logo.svg" alt="logo" />
+						<img src="./images/icons//logo.svg" alt="logo" />
 					</a>
 				</div>
 				<ul class="header__menu">
@@ -27,7 +27,7 @@
 				</ul>
 				<div class="header__btns">
 					<a href="tel:" class="header__btn-call">
-						<img src="images/icons/call.svg" alt="phone ico">
+						<img src="./images/icons/call.svg" alt="phone ico">
 					</a>
 					<button class="header__btn-login">Войти</button>
 				</div>
@@ -39,13 +39,13 @@
 				<!-- MobNav -->
 				<div class="mobile-nav">
 					<div class="header__logo">
-						<img src="images/icons//logo.svg" alt="logo" />
+						<img src="./images/icons//logo.svg" alt="logo" />
 					</div>
 					<div class="mobile-nav__item">
 
 						<div class="header__btns">
 							<a href="tel:" class="header__btn-call">
-								<img src="images/icons/call.svg" alt="phone ico">
+								<img src="./images/icons/call.svg" alt="phone ico">
 							</a>
 							<button class="header__btn-login">Войти</button>
 						</div>
@@ -141,7 +141,7 @@
 						</div>
 					</div>
 					<div class="card__item">
-						<img class="card__img" src="images/card-img1.png" alt="Снегобой">
+						<img class="card__img" src="./images/card-img1.png" alt="Снегобой">
 					</div>
 				</div>
 			</div>
@@ -203,47 +203,47 @@
 											<label class="container-radio payment-form__card">
 												<input type="radio" name="radio">
 												<span class="radio-fake">
-													<img src="images/icons/perfect_money-big.svg" alt="">
+													<img src="./images/icons/perfect_money-big.svg" alt="">
 												</span>
 											</label>
 											<label class="container-radio payment-form__card">
 												<input type="radio" name="radio">
 												<span class="radio-fake">
-													<img src="images/icons/qiwi-crypto.svg" alt="">
+													<img src="./images/icons/qiwi-crypto.svg" alt="">
 												</span>
 											</label>
 											<label class="container-radio payment-form__card">
 												<input type="radio" name="radio">
 												<span class="radio-fake">
-													<img class="yandex" src="images/icons/yandex-money.svg" alt="">
+													<img class="yandex" src="./images/icons/yandex-money.svg" alt="">
 												</span>
 											</label>
 
 											<label class="container-radio payment-form__card">
 												<input type="radio" name="radio">
 												<span class="radio-fake">
-													<img class="visa" src="images/icons/visa.svg" alt="">
+													<img class="visa" src="./images/icons/visa.svg" alt="">
 												</span>
 											</label>
 
 											<label class="container-radio payment-form__card">
 												<input type="radio" checked="checked" name="radio">
 												<span class="radio-fake">
-													<img class="mastercard" src="images/icons/mastercard.svg" alt="">
+													<img class="mastercard" src="./images/icons/mastercard.svg" alt="">
 												</span>
 											</label>
 
 											<label class="container-radio payment-form__card payeer">
 												<input type="radio" name="radio">
 												<span class="radio-fake ">
-													<img class="payeer" src="images/icons/payeer.svg" alt="">
+													<img class="payeer" src="./images/icons/payeer.svg" alt="">
 												</span>
 											</label>
 
 											<label class="container-radio payment-form__card">
 												<input type="radio" name="radio">
 												<span class="radio-fake">
-													<img class="mir" src="images/icons/mir.svg" alt="">
+													<img class="mir" src="./images/icons/mir.svg" alt="">
 												</span>
 											</label>
 
