--- a/distribution.html
+++ b/distribution.html
@@ -20,7 +20,7 @@
 			<div class="header__row">
 				<div class="header__logo">
                     <a href="./index.html">
-						<img src="images/icons//logo.svg" alt="logo" />
+						<img src="./images/icons//logo.svg" alt="logo" />
 					</a>
 				</div>
 				<ul class="header__menu">
@@ -31,7 +31,7 @@
 				</ul>
 				<div class="header__btns">
 					<a href="tel:" class="header__btn-call">
-						<img src="images/icons/call.svg" alt="phone ico">
+						<img src="./images/icons/call.svg" alt="phone ico">
 					</a>
 					<button class="header__btn-login">Войти</button>
 				</div>
@@ -43,7 +43,7 @@
 				<!-- MobNav -->
 				<div class="mobile-nav">
 					<div class="header__logo">
-						<img src="images/icons//logo.svg" alt="logo" />
+						<img src="./images/icons//logo.svg" alt="logo" />
 					</div>
 					<div class="mobile-nav__item">
 
