--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                         <div class="intro__info-slide swiper-slide">
                            <div class="intro__info-item">
                               <a class="intro__info-link" href="#">
-                                 <img class="intro__info-img" src="/images/index/slider-image1.jpg" alt="slider-image">
+                                 <img class="intro__info-img" src="./images/index/slider-image1.jpg" alt="slider-image">
                                  <div class="intro__info-name">Акции</div>
                               </a>
                            </div>
@@ -97,7 +97,7 @@
                         <div class="intro__info-slide swiper-slide">
                            <div class="intro__info-item">
                               <a class="intro__info-link" href="#">
-                                 <img class="intro__info-img" src="/images/index/slider-image1.jpg" alt="slider-image">
+                                 <img class="intro__info-img" src="./images/index/slider-image1.jpg" alt="slider-image">
                                  <div class="intro__info-name">Популярные товары</div>
                               </a>
                            </div>
@@ -121,7 +121,7 @@
                <div class="intro__giveaway-timer">
                   <div class="intro__giveaway-time"> 04:33:21</div>
                   <a href="./participation.html" class="intro__giveaway-btn">Участвовать</a>
-                  <img class="intro__giveaway-img" src="/images/index/b-cash.png" alt="b-cash">
+                  <img class="intro__giveaway-img" src="./images/index/b-cash.png" alt="b-cash">
                </div>
             </div>
          </div>
@@ -152,7 +152,7 @@
                      <p class="catalog__menu-all menu-all-holder  catalog-all ">все</p>
                   </div>
                   <button class="catalog__menu-toggle">
-                     <img class="catalog__menu-img" src="/images/icons/menu-btn.svg" alt="menu-icon">
+                     <img class="catalog__menu-img" src="./images/icons/menu-btn.svg" alt="menu-icon">
                   </button>
                   <ul class="catalog__menu-list menu-list-option">
                      <li class="catalog__menu-btn">Все</li>
@@ -176,7 +176,7 @@
                         <div class="card-item__elipse"></div>
                         <p class="card-item__name">Джон Уик</p>
                         <div class="card-item__img">
-                           <img src="/images/product-characters/John-Wick.png" alt="john-wick">
+                           <img src="./images/product-characters/John-Wick.png" alt="john-wick">
                         </div>
                         <p class="card-item__price">599 р</p>
                      </div>
@@ -187,7 +187,7 @@
                         <div class="card-item__elipse"></div>
                         <p class="card-item__name">Какаши</p>
                         <div class="card-item__img">
-                           <img src="/images/product-characters/kakashi.png" alt="kakashi">
+                           <img src="./images/product-characters/kakashi.png" alt="kakashi">
                         </div>
                         <p class="card-item__price">599 р</p>
                      </div>
@@ -198,7 +198,7 @@
                         <div class="card-item__elipse"></div>
                         <p class="card-item__name">снегобой</p>
                         <div class="card-item__img">
-                           <img src="/images/product-characters/snowboy.png" alt="snow-boy">
+                           <img src="./images/product-characters/snowboy.png" alt="snow-boy">
                         </div>
                         <p class="card-item__price">599 р</p>
                      </div>
@@ -209,7 +209,7 @@
                         <div class="card-item__elipse"></div>
                         <p class="card-item__name">в-баксы</p>
                         <div class="card-item__img small-img">
-                           <img src="/images/product-characters/b-cash.png" alt="b-cash">
+                           <img src="./images/product-characters/b-cash.png" alt="b-cash">
                         </div>
                         <p class="card-item__price">599 р</p>
                      </div>
@@ -220,7 +220,7 @@
                         <div class="card-item__elipse"></div>
                         <p class="card-item__name">в-баксы</p>
                         <div class="card-item__img small-img">
-                           <img src="/images/product-characters/b-cash.png" alt="b-cash">
+                           <img src="./images/product-characters/b-cash.png" alt="b-cash">
                         </div>
                         <p class="card-item__price">599 р</p>
                      </div>
@@ -231,7 +231,7 @@
                         <div class="card-item__elipse"></div>
                         <p class="card-item__name">Джон Уик</p>
                         <div class="card-item__img">
-                           <img src="/images/product-characters/John-Wick.png" alt="john-wick">
+                           <img src="./images/product-characters/John-Wick.png" alt="john-wick">
                         </div>
                         <p class="card-item__price">599 р</p>
                      </div>
@@ -242,7 +242,7 @@
                         <div class="card-item__elipse"></div>
                         <p class="card-item__name">Какаши</p>
                         <div class="card-item__img">
-                           <img src="/images/product-characters/kakashi.png" alt="kakashi">
+                           <img src="./images/product-characters/kakashi.png" alt="kakashi">
                         </div>
                         <p class="card-item__price">599 р</p>
                      </div>
@@ -253,7 +253,7 @@
                         <div class="card-item__elipse"></div>
                         <p class="card-item__name">снегобой</p>
                         <div class="card-item__img">
-                           <img src="/images/product-characters/snowboy.png" alt="snow-boy">
+                           <img src="./images/product-characters/snowboy.png" alt="snow-boy">
                         </div>
                         <p class="card-item__price">599 р</p>
                      </div>
@@ -264,7 +264,7 @@
                         <div class="card-item__elipse"></div>
                         <p class="card-item__name">в-баксы</p>
                         <div class="card-item__img  small-img">
-                           <img src="/images/product-characters/b-cash.png" alt="b-cash">
+                           <img src="./images/product-characters/b-cash.png" alt="b-cash">
                         </div>
                         <p class="card-item__price">599 р</p>
                      </div>
@@ -300,7 +300,7 @@
                            <div class="card-item__elipse"></div>
                            <p class="card-item__name">Джон Уик</p>
                            <div class="card-item__img">
-                              <img src="/images/product-characters/John-Wick.png" alt="john-wick">
+                              <img src="./images/product-characters/John-Wick.png" alt="john-wick">
                            </div>
                            <p class="card-item__price">599 р</p>
                         </div>
@@ -326,7 +326,7 @@
                            <div class="card-item__elipse"></div>
                            <p class="card-item__name">снегобой</p>
                            <div class="card-item__img">
-                              <img src="/images/product-characters/snowboy.png" alt="snow-boy">
+                              <img src="./images/product-characters/snowboy.png" alt="snow-boy">
                            </div>
                            <p class="card-item__price">599 р</p>
                         </div>
@@ -339,7 +339,7 @@
                            <div class="card-item__elipse"></div>
                            <p class="card-item__name">в-баксы</p>
                            <div class="card-item__img small-img">
-                              <img src="/images/product-characters/b-cash.png" alt="b-cash">
+                              <img src="./images/product-characters/b-cash.png" alt="b-cash">
                            </div>
                            <p class="card-item__price">599 р</p>
                         </div>
@@ -352,7 +352,7 @@
                            <div class="card-item__elipse"></div>
                            <p class="card-item__name">в-баксы</p>
                            <div class="card-item__img small-img">
-                              <img src="/images/product-characters/b-cash.png" alt="b-cash">
+                              <img src="./images/product-characters/b-cash.png" alt="b-cash">
                            </div>
                            <p class="card-item__price">599 р</p>
                         </div>
@@ -365,7 +365,7 @@
                            <div class="card-item__elipse"></div>
                            <p class="card-item__name">Джон Уик</p>
                            <div class="card-item__img">
-                              <img src="/images/product-characters/John-Wick.png" alt="john-wick">
+                              <img src="./images/product-characters/John-Wick.png" alt="john-wick">
                            </div>
                            <p class="card-item__price">599 р</p>
                         </div>
@@ -378,7 +378,7 @@
                            <div class="card-item__elipse"></div>
                            <p class="card-item__name">Какаши</p>
                            <div class="card-item__img">
-                              <img src="/images/product-characters/kakashi.png" alt="kakashi">
+                              <img src="./images/product-characters/kakashi.png" alt="kakashi">
                            </div>
                            <p class="card-item__price">599 р</p>
                         </div>
@@ -391,7 +391,7 @@
                            <div class="card-item__elipse"></div>
                            <p class="card-item__name">снегобой</p>
                            <div class="card-item__img">
-                              <img src="/images/product-characters/snowboy.png" alt="snow-boy">
+                              <img src="./images/product-characters/snowboy.png" alt="snow-boy">
                            </div>
                            <p class="card-item__price">599 р</p>
                         </div>
@@ -404,7 +404,7 @@
                            <div class="card-item__elipse"></div>
                            <p class="card-item__name">в-баксы</p>
                            <div class="card-item__img small-img">
-                              <img src="/images/product-characters/b-cash.png" alt="b-cash">
+                              <img src="./images/product-characters/b-cash.png" alt="b-cash">
                            </div>
                            <p class="card-item__price">599 р</p>
                         </div>
@@ -417,7 +417,7 @@
                            <div class="card-item__elipse"></div>
                            <p class="card-item__name">в-баксы</p>
                            <div class="card-item__img small-img">
-                              <img src="/images/product-characters/b-cash.png" alt="b-cash">
+                              <img src="./images/product-characters/b-cash.png" alt="b-cash">
                            </div>
                            <p class="card-item__price">599 р</p>
                         </div>
