--- a/news.html
+++ b/news.html
@@ -16,7 +16,7 @@
 			<div class="header__row">
 				<div class="header__logo">
 					<a href="./index.html">
-						<img src="images/icons//logo.svg" alt="logo" />
+						<img src="./images/icons//logo.svg" alt="logo" />
 					</a>
 				</div>
 				<ul class="header__menu">
@@ -27,7 +27,7 @@
 				</ul>
 				<div class="header__btns">
 					<a href="tel:" class="header__btn-call">
-						<img src="images/icons/call.svg" alt="phone ico">
+						<img src="./images/icons/call.svg" alt="phone ico">
 					</a>
 					<button class="header__btn-login">Войти</button>
 				</div>
@@ -39,13 +39,13 @@
 				<!-- MobNav -->
 				<div class="mobile-nav">
 					<div class="header__logo">
-						<img src="images/icons//logo.svg" alt="logo" />
+						<img src="./images/icons//logo.svg" alt="logo" />
 					</div>
 					<div class="mobile-nav__item">
 
 						<div class="header__btns">
 							<a href="tel:" class="header__btn-call">
-								<img src="images/icons/call.svg" alt="phone ico">
+								<img src="./images/icons/call.svg" alt="phone ico">
 							</a>
 							<button class="header__btn-login">Войти</button>
 						</div>
@@ -86,8 +86,8 @@
 						<a href="#!">
 							<div class="article__img">
 								<picture>
-									<source srcset="images/news-articles/article-1-mob.jpg" media="(max-width: 1600px)">
-									<img src="images/news-articles/article-1.jpg" alt="articel-1">
+									<source srcset="./images/news-articles/article-1-mob.jpg" media="(max-width: 1600px)">
+									<img src="./images/news-articles/article-1.jpg" alt="articel-1">
 								</picture>
 							</div>
 						</a>
@@ -100,7 +100,7 @@
 					<article class="news-articles__article article">
 						<a href="#!">
 							<div class="article__img">
-								<img src="images/news-articles/article-2.jpg" alt="articel-1">
+								<img src="./images/news-articles/article-2.jpg" alt="articel-1">
 							</div>
 						</a>
 
@@ -113,7 +113,7 @@
 					<article class="news-articles__article article">
 						<a href="#!">
 							<div class="article__img">
-								<img src="images/news-articles/article-3.jpg" alt="articel-1">
+								<img src="./images/news-articles/article-3.jpg" alt="articel-1">
 							</div>
 						</a>
 						<div class="article__text">
@@ -125,7 +125,7 @@
 					<article class="news-articles__article article">
 						<a href="#!">
 							<div class="article__img">
-								<img src="images/news-articles/article-4.jpg" alt="articel-1">
+								<img src="./images/news-articles/article-4.jpg" alt="articel-1">
 							</div>
 						</a>
 						<div class="article__text">
