--- a/participation.html
+++ b/participation.html
@@ -17,7 +17,7 @@
 			<div class="header__row">
 				<div class="header__logo">
                <a href="./index.html">
-						<img src="images/icons//logo.svg" alt="logo" />
+						<img src="./images/icons//logo.svg" alt="logo" />
 					</a>
 				</div>
 				<ul class="header__menu">
@@ -28,7 +28,7 @@
 				</ul>
 				<div class="header__btns">
 					<a href="tel:" class="header__btn-call">
-						<img src="images/icons/call.svg" alt="phone ico">
+						<img src="./images/icons/call.svg" alt="phone ico">
 					</a>
 					<button class="header__btn-login">Войти</button>
 				</div>
@@ -40,13 +40,13 @@
 				<!-- MobNav -->
 				<div class="mobile-nav">
 					<div class="header__logo">
-						<img src="images/icons//logo.svg" alt="logo" />
+						<img src="./images/icons//logo.svg" alt="logo" />
 					</div>
 					<div class="mobile-nav__item">
 
 						<div class="header__btns">
 							<a href="tel:" class="header__btn-call">
-								<img src="images/icons/call.svg" alt="phone ico">
+								<img src="./images/icons/call.svg" alt="phone ico">
 							</a>
 							<button class="header__btn-login">Войти</button>
 						</div>
